files to publish

--- a/package.json
+++ b/package.json
@@ -36,6 +36,10 @@
     "tslint": "^5.18.0",
     "typescript": "^3.5.3"
   },
+  "files": [
+    "dist",
+    "types"
+  ],
   "directories": {
     "test": "test"
   },
