--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   "typings": "types/index.d.ts",
   "bundlib": {
     "name": "buildFunc",
-    "min": "browser"
+    "min": "browser",
+    "globals": {
+      "object-hash": "objectHash"
+    }
   },
   "scripts": {
     "clean": "rm -rf dist types coverage node_modules/.cache/bundlib node_modules/.cache/jest",
@@ -28,6 +31,7 @@
   "devDependencies": {
     "@types/jest": "^24.0.17",
     "@types/node": "^12.7.1",
+    "@types/object-hash": "^1.3.0",
     "bundlib": "^0.12.2",
     "chokidar": "^3.0.2",
     "eslint": "^6.2.2",
