--- a/package.json
+++ b/package.json
@@ -26,19 +26,22 @@
     "build": "bundlib -d",
     "test": "jest --color -w 3",
     "watch": "npm test -- --watch-all",
-    "preversion": "npm run clean && npm test && npm run lint && npm run build"
+    "preversion": "npm run clean && npm run lint && npm test && npm run build"
+  },
+  "dependencies": {
+    "object-hash": "^1.3.1"
   },
   "devDependencies": {
     "@types/jest": "^24.0.17",
     "@types/node": "^12.7.4",
     "@types/object-hash": "^1.3.0",
-    "bundlib": "^0.12.4",
+    "bundlib": "^0.12.5",
     "chokidar": "^3.0.2",
     "eslint": "^6.3.0",
     "husky": "^3.0.5",
     "jest": "^24.8.0",
     "ts-jest": "^24.0.2",
-    "tslint": "^5.18.0",
+    "tslint": "^5.20.0",
     "typescript": "^3.6.2"
   },
   "files": [
@@ -60,8 +63,5 @@
     "url": "https://github.com/manferlo81/build-function/issues"
   },
   "homepage": "https://github.com/manferlo81/build-function#readme",
-  "license": "MIT",
-  "dependencies": {
-    "object-hash": "^1.3.1"
-  }
+  "license": "MIT"
 }
