--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
     }
   },
   "scripts": {
-    "clean": "rimraf dist types coverage node_modules/.cache/bundlib node_modules/.cache/jest",
-    "lint": "eslint src/**/*.ts __test__/**/*.ts",
     "dev": "bundlib -dw",
     "build": "bundlib -d",
     "test": "jest --color -w 3",
     "watch": "npm test -- --watch-all",
-    "preversion": "npm run clean && npm run lint && npm test && npm run build"
+    "clean": "rimraf dist types coverage node_modules/.cache/bundlib node_modules/.cache/jest",
+    "lint": "eslint src/**/*.ts __test__/**/*.ts",
+    "prerelease": "npm run clean && npm run lint && npm test && npm run build",
+    "release": "standard-version"
   },
   "dependencies": {
     "object-hash": "^2.0.0"
@@ -43,6 +44,7 @@
     "husky": "^3.0.9",
     "jest": "^24.8.0",
     "rimraf": "^3.0.0",
+    "standard-version": "^7.0.0",
     "ts-jest": "^24.1.0",
     "typescript": "^3.7.2"
   },
