--- a/.versionrc.json
+++ b/.versionrc.json
@@ -1,30 +1,4 @@
 {
   "changelogHeader": "# build-function changelog\n\n## Version History\n",
-  "header": "# build-function changelog\n\n## Version History\n",
-  "types": [
-    {
-      "type": "chore",
-      "section": "Other Changes"
-    },
-    {
-      "type": "feat",
-      "section": "Features"
-    },
-    {
-      "type": "fix",
-      "section": "Bug Fixes"
-    },
-    {
-      "type": "docs",
-      "section": "Documentation"
-    },
-    {
-      "type": "test",
-      "section": "Tests"
-    },
-    {
-      "type": "BREAKING CHANGE",
-      "section": "Breaking Changes"
-    }
-  ]
+  "header": "# build-function changelog\n\n## Version History\n"
 }
