--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,11 @@
     "noImplicitReturns": true,
     "noUnusedLocals": true,
     "removeComments": true
-  }
+  },
+  "include": [
+    "src/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules/**"
+  ]
 }
