chore(lint): Require semicolon

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -34,13 +34,14 @@ rules:
     - error
     - single
 
-  semi:
-    - error
-    - never
-
   comma-dangle:
     - error
     - always-multiline
 
   "@typescript-eslint/no-explicit-any": "off"
   "@typescript-eslint/explicit-function-return-type": "off"
+
+  semi: "off"
+  "@typescript-eslint/semi":
+    - error
+    - always
