--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
-    "module": "ESNext",
+    "target": "ES2017",
+    "module": "ES2015",
     "moduleResolution": "Node",
     "esModuleInterop": true,
     "resolveJsonModule": true,
