--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
   "types": "dist/index.d.ts",
   "typings": "dist/index.d.ts",
   "scripts": {
-    "dev": "bundlib -dw",
-    "build": "bundlib -d",
+    "clean:cache": "rimraf node_modules/.cache/{bundlib,jest}",
+    "clean:build": "rimraf dist coverage",
+    "clean": "run-p clean:*",
+    "lint:test": "eslint __test__/**/*.ts",
+    "lint:src": "eslint src/**/*.ts",
+    "lint": "run-p lint:*",
     "test": "jest --color -w 3",
     "watch": "npm test -- --watch-all",
-    "clean": "rimraf dist coverage node_modules/.cache/bundlib node_modules/.cache/jest",
-    "lint": "eslint src/**/*.ts __test__/**/*.ts",
-    "prerelease": "npm run clean && npm run lint && npm test && npm run build",
+    "build": "bundlib -d",
+    "dev": "npm run build -- -w",
+    "prerelease": "run-s clean lint test build",
     "release": "standard-version"
   },
   "dependencies": {
@@ -38,6 +42,7 @@
     "eslint": "^7.13.0",
     "husky": "^4.3.0",
     "jest": "^26.6.3",
+    "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
     "standard-version": "^9.0.0",
     "ts-jest": "^26.4.4",
