--- a/package.json
+++ b/package.json
@@ -7,11 +7,16 @@
     "function",
     "json"
   ],
-  "main": "dist/build-function.js",
-  "module": "dist/build-function.mjs",
-  "browser": "dist/build-function.umd.js",
-  "types": "dist/index.d.ts",
-  "typings": "dist/index.d.ts",
+  "type": "commonjs",
+  "main": "./dist/build-function.cjs",
+  "module": "./dist/build-function.mjs",
+  "exports": {
+    "import": "./dist/build-function.mjs",
+    "default": "./dist/build-function.cjs"
+  },
+  "browser": "./dist/build-function.umd.js",
+  "types": "./dist/index.d.ts",
+  "typings": "./dist/index.d.ts",
   "scripts": {
     "clean:cache": "rimraf node_modules/.cache/{bundlib,jest}",
     "clean:build": "rimraf dist coverage",
