--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "json"
   ],
   "type": "commonjs",
-  "main": "./dist/build-function.cjs",
-  "module": "./dist/build-function.mjs",
   "exports": {
+    "types": "./dist/types/index.d.ts",
     "import": "./dist/build-function.mjs",
     "default": "./dist/build-function.cjs"
   },
+  "main": "./dist/build-function.cjs",
+  "module": "./dist/build-function.mjs",
   "browser": "./dist/build-function.umd.js",
   "types": "./dist/types/index.d.ts",
   "typings": "./dist/types/index.d.ts",
@@ -29,28 +30,32 @@
     "build": "bundlib -d",
     "dev": "npm run build -- -w",
     "prerelease": "run-s clean lint test build",
-    "release": "standard-version"
+    "release": "standard-version",
+    "prepare": "husky"
   },
   "dependencies": {
-    "object-hash": "^2.2.0"
+    "object-hash": "^3.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.0",
-    "@babel/preset-env": "^7.15.0",
-    "@types/jest": "^27.0.2",
-    "@types/object-hash": "^2.1.1",
-    "@typescript-eslint/eslint-plugin": "^4.29.0",
-    "@typescript-eslint/parser": "^4.29.3",
+    "@babel/core": "^7.24.9",
+    "@babel/preset-env": "^7.24.8",
+    "@types/jest": "^29.5.12",
+    "@types/object-hash": "^3.0.6",
+    "@typescript-eslint/eslint-plugin": "^7.16.1",
+    "@typescript-eslint/parser": "^7.16.1",
     "bundlib": "^0.18.4",
-    "chokidar": "^3.5.2",
-    "eslint": "^7.32.0",
-    "husky": "^7.0.2",
-    "jest": "^27.0.6",
+    "chokidar": "^3.6.0",
+    "eslint": "^8.57.0",
+    "husky": "^9.1.1",
+    "jest": "^29.7.0",
     "npm-run-all": "^4.1.5",
-    "rimraf": "^3.0.2",
-    "standard-version": "^9.3.1",
-    "ts-jest": "^27.0.5",
-    "typescript": "^4.3.5"
+    "rimraf": "^6.0.1",
+    "standard-version": "^9.5.0",
+    "ts-jest": "^29.2.3",
+    "typescript": "^5.5.3"
+  },
+  "overrides": {
+    "@rollup/plugin-eslint": "^9.0.0"
   },
   "author": {
     "name": "Manuel Fernandez",
