chore(ci): repair ci config
* update codecov orb to v4.1.0
* use nodejs 18
* clear cache
* refactor

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,18 +1,28 @@
 version: 2.1
 
 orbs:
-  codecov: codecov/codecov@1.0.5
+  codecov: codecov/codecov@4.1.0
 
 executors:
-
-  node:
+  executor_node_18:
     docker:
-      - image: circleci/node:10
-    working_directory: &working_directory ~/build-function
+      - image: cimg/node:18.20
+    working_directory: ~/build-function
 
 commands:
+  command_save_workspace:
+    steps:
+      - persist_to_workspace:
+          root: ~/build-function
+          paths:
+            - .
 
-  npm_publish:
+  command_restore_workspace:
+    steps:
+      - attach_workspace:
+          at: ~/build-function
+
+  command_publish_to_npm:
     steps:
       - run:
           name: Login to npm
@@ -22,70 +32,63 @@ commands:
           command: npm publish
 
 jobs:
-
-  test_and_build:
-    executor: node
+  job_test_and_build:
+    executor: executor_node_18
     steps:
       - checkout
       - restore_cache:
           keys:
-            - v1-deps-build-function-{{ checksum "package.json" }}
-            - v1-deps-build-function-
+            - v2-deps-build-function-{{ checksum "package-lock.json" }}
+            - v2-deps-build-function-
       - run:
           name: Install Dependencies
           command: npm install
       - save_cache:
           paths:
             - node_modules
-          key: v1-deps-build-function-{{ checksum "package.json" }}
+          key: v2-deps-build-function-{{ checksum "package-lock.json" }}
       - run:
           name: Test
           command: npm test
       - run:
           name: Build
           command: npm run build
-      - persist_to_workspace:
-          root: *working_directory
-          paths: .
+      - command_save_workspace
 
-  upload_coverage:
-    executor: node
+  job_upload_coverage:
+    executor: executor_node_18
     steps:
-      - attach_workspace: &attach_workspace
-          at: *working_directory
+      - command_restore_workspace
       - codecov/upload:
           file: coverage/*.json
 
-  publish_to_npm:
-    executor: node
+  job_publish_to_npm:
+    executor: executor_node_18
     steps:
-      - attach_workspace: *attach_workspace
-      - npm_publish
+      - command_restore_workspace
+      - command_publish_to_npm
 
 workflows:
-  version: 2
-
-  workflow:
+  workflow_ci:
     jobs:
-
-      - test_and_build:
+      - job_test_and_build:
           filters:
             tags:
               only: /.*/
             branches:
               only: /.*/
 
-      - upload_coverage:
+      - job_upload_coverage:
           requires:
-            - test_and_build
+            - job_test_and_build
           filters:
             branches:
               only: /master/
 
-      - publish_to_npm:
+      - job_publish_to_npm:
           context: npm
           requires:
-            - test_and_build
+            - job_test_and_build
           filters:
             tags:
               only: /^v\d+\.\d+\.\d+$/
