--- a/package.json
+++ b/package.json
@@ -39,28 +39,31 @@
   "devDependencies": {
     "@babel/core": "^7.24.9",
     "@babel/preset-env": "^7.24.8",
+    "@eslint/js": "^9.9.1",
+    "@stylistic/eslint-plugin": "^2.7.2",
     "@types/jest": "^29.5.12",
     "@types/object-hash": "^3.0.6",
-    "@typescript-eslint/eslint-plugin": "^7.16.1",
-    "@typescript-eslint/parser": "^7.16.1",
     "bundlib": "^0.21.0",
     "chokidar": "^3.6.0",
-    "eslint": "^8.57.0",
+    "eslint": "^9.9.1",
+    "globals": "^15.9.0",
     "husky": "^9.1.1",
     "jest": "^29.7.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^6.0.1",
     "standard-version": "^9.5.0",
     "ts-jest": "^29.2.3",
-    "typescript": "^5.5.3"
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^8.4.0"
   },
   "overrides": {
-    "@rollup/plugin-eslint": "^9.0.0"
+    "eslint": "^9.9.1"
   },
   "author": {
     "name": "Manuel Fernandez",
     "email": "manferlo81@gmail.com"
   },
+  "homepage": "https://github.com/manferlo81/build-function#readme",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/manferlo81/build-function.git"
@@ -68,6 +71,5 @@
   "bugs": {
     "url": "https://github.com/manferlo81/build-function/issues"
   },
-  "homepage": "https://github.com/manferlo81/build-function#readme",
   "license": "MIT"
 }
