chore:(deps): Update dependencies

--- a/package.json
+++ b/package.json
@@ -19,17 +19,19 @@
   "types": "./dist/types/index.d.ts",
   "typings": "./dist/types/index.d.ts",
   "scripts": {
-    "clean:cache": "rimraf node_modules/.cache/{bundlib,jest}",
+    "clean:cache": "rimraf --glob node_modules/.cache/{bundlib,jest}",
     "clean:build": "rimraf dist coverage",
     "clean": "run-p clean:*",
-    "lint:test": "eslint __test__/**/*.ts",
-    "lint:src": "eslint src/**/*.ts",
+    "lint:test": "eslint __test__",
+    "lint:src": "eslint src",
     "lint": "run-p lint:*",
     "test": "jest --color -w 3",
     "watch": "npm test -- --watch-all",
     "build": "bundlib -d",
     "dev": "npm run build -- -w",
-    "prerelease": "run-s clean lint test build",
+    "ci-build": "run-s lint test build",
+    "clean-build": "run-s clean ci-build",
+    "prerelease": "run-s clean ci-build",
     "release": "standard-version",
     "prepare": "husky"
   },
@@ -37,8 +39,8 @@
     "object-hash": "^3.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.9",
-    "@babel/preset-env": "^7.24.8",
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.4",
     "@eslint/js": "^9.9.1",
     "@stylistic/eslint-plugin": "^2.7.2",
     "@types/jest": "^29.5.12",
@@ -47,12 +49,12 @@
     "chokidar": "^3.6.0",
     "eslint": "^9.9.1",
     "globals": "^15.9.0",
-    "husky": "^9.1.1",
+    "husky": "^9.1.5",
     "jest": "^29.7.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^6.0.1",
     "standard-version": "^9.5.0",
-    "ts-jest": "^29.2.3",
+    "ts-jest": "^29.2.5",
     "typescript": "^5.5.4",
     "typescript-eslint": "^8.4.0"
   },
