chore: Setup Babel correctly

--- a/.babelrc
+++ b/.babelrc
@@ -3,11 +3,30 @@
     [
       "@babel/preset-env",
       {
-        "targets": {
-          "node": "8",
-          "browsers": "> 0.25%, not dead"
-        }
+        "useBuiltIns": "entry",
+        "corejs": "3.38",
+        "exclude": [
+          "transform-typeof-symbol"
+        ]
       }
     ]
-  ]
+  ],
+  "assumptions": {
+    "arrayLikeIsIterable": true,
+    "constantReexports": true,
+    "ignoreFunctionLength": true,
+    "ignoreToPrimitiveHint": true,
+    "mutableTemplateObject": true,
+    "noClassCalls": true,
+    "noDocumentAll": true,
+    "objectRestNoSymbols": true,
+    "privateFieldsAsProperties": true,
+    "pureGetters": true,
+    "setClassMethods": true,
+    "setComputedProperties": true,
+    "setPublicClassFields": true,
+    "setSpreadProperties": true,
+    "skipForOfIteratorClosing": true,
+    "superIsCallableConstructor": true
+  }
 }
