chore: Fix release permissions

--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -12,6 +12,9 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: write
+
     steps:
       - name: Checkout, Setup Node.js 20.x and Install dependencies
         uses: manferlo81/action-checkout-node-install@v0
