chore: Lint all

--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "clean:cache": "rimraf --glob node_modules/.cache/{bundlib,jest}",
     "clean:build": "rimraf dist coverage",
     "clean": "run-p clean:*",
+    "lint": "eslint .",
     "lint:test": "eslint __test__",
     "lint:src": "eslint src",
     "lint:config": "eslint *.config.mjs",
-    "lint": "run-p lint:*",
     "test": "jest --color -w 3",
     "watch": "npm test -- --watch-all",
     "build": "bundlib -d",
