--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "chokidar": "^4.0.3",
     "core-js": "^3.42.0",
     "eslint": "^9.25.1",
+    "eslint-import-resolver-typescript": "^4.3.4",
+    "eslint-plugin-import-x": "^4.11.0",
     "globals": "^16.0.0",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
